# hibiki

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
module/: default.nix
src/: audio.rs  config.rs  input.rs  library.rs  main.rs  mcp.rs  render.rs  scripting.rs  torrent.rs
src/render/: mod.rs  player.rs  state.rs
