[package]
name = "hibikine"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Hibiki (響) — GPU-rendered music player with built-in BitTorrent for hi-fi music"
homepage = "https://github.com/pleme-io/hibiki"
repository = "https://github.com/pleme-io/hibiki"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/hibikine"
categories = ["multimedia::audio"]
keywords = ["music", "player", "bittorrent", "gpu", "hifi"]
publish = true

[[bin]]
name = "hibiki"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Pleme-io shared libraries
garasu = { git = "https://github.com/pleme-io/garasu" }
madori = { git = "https://github.com/pleme-io/madori" }
egaku = { git = "https://github.com/pleme-io/egaku" }
irodzuki = { git = "https://github.com/pleme-io/irodzuki" }
mojiban = { git = "https://github.com/pleme-io/mojiban" }
oto = { git = "https://github.com/pleme-io/oto" }
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }
kaname = { git = "https://github.com/pleme-io/kaname" }
shikumi = { git = "https://github.com/pleme-io/shikumi" }
shidou = { git = "https://github.com/pleme-io/shidou" }
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }

# MCP server (rmcp + schemars needed for derive macros used alongside kaname)
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"

# GPU rendering
wgpu = "25"
winit = "0.30"
pollster = "0.4"

# Audio playback
rodio = "0.20"
symphonia = { version = "0.5", features = ["all"] }

# Audio metadata
lofty = "0.22"

# BitTorrent
librqbit = "8"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }
dirs = "6.0"
thiserror = "2"
anyhow = "1"

# Utilities
rand = "0.9"

[dev-dependencies]
tempfile = "3"
